[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lms_synergy_library"
version = "0.2.2"
authors = [
    {name = "Nikita Kovinjko", email = "kotorkovsciy@gmail.com"},
]
description = "A library that allows you to work with LMS"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "beautifulsoup4",
    "fake-useragent"
]

[project.urls]
"Homepage" = "https://github.com/kotorkovsciy/lms-synergy-library"
"Bug Tracker" = "https://github.com/kotorkovsciy/lms-synergy-library/issues"
